# bohemian-python

./: .gitattributes  README.md  bohemian.py  environment.yml  matrix_generators.py  pyproject.toml
Examples/Random_5x5_d3/: Random 5x5 {-1, 0, 1}.ipynb
Examples/Tridiagonal_20x20/: Tridiagonal 20x20 {-1, 1}.ipynb
bohemian/: __init__.py  bohemian.py  histogram_maps.py  matrix_generators.py  sequential_matrix_generators.py
