[tool.poetry]
name = "bohemian"
version = "0.1.0"
description = ""
authors = ["steventhornton <steven@steventhornton.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
